--- a/boston_housing/boston_housing_PT.ipynb
+++ b/boston_housing/boston_housing_PT.ipynb
@@ -723,7 +723,8 @@
     "O Valor sugerido para o cliente 2 é de $220,886.84, é a que possui o menor numero de comodos das três casas (RM = 4), possui uma vizinhança com proprietarios em sua media mais alta dos tres imoveis com renda baixa, 32% da população com renda baixa (LSTAT = 32%) e por fim a média de estudantes por professor é a mais alta tambem (PTRATIO 22 para 1).\n",
     "\n",
     "O Valor sugerido para o cliente 3 é de $937,650.00, é a que possui o maior numero de comodos das três casas (RM = 8), possui a vizinhança com a melhor renda das três, apenas 3% possui renda baixa (LSTAT = 3%) e por fim a média de estudantes por professor é tambem a mais baixa de todas (PTRATIO 12 para 1).\n",
-    "\n"
+    "\n",
+    "No geral os dados parecem razoaveis dados as especificações, apenas a imovel do cliente 1 que está abaixo da média poderia ser revisto, mas ainda assim levando em consideração todos os criterios de RM, LSTAT e PTRATIO, diria que os valores fazem sentido, mas ainda assim necessitam ser revisados por um especialista, talvez treinando mais o modelo seja possivel extrair resultados melhores."
    ]
   },
   {
